# Kielas_rm_keypoint_armor_detector

./: .gitignore  Dockerfile  README.md  config.yaml  docker-compose.yml  main.py  pyproject.toml
extract_ros2_bag/: extract.py
src/data_process/: augment.py  process.py  purify.py  visiualize.py
src/data_process/src/: __init__.py  augment.py
src/demo/: demo.py
src/demo/src/: __init__.py  detector.py
src/training/: export.py  train.py
src/training/src/: __init__.py  augment.py  datasets.py  hook.py  loss.py  model.py
tools/: background.py  extract_ros2_bag.py  negative.py
tools/hik_camera/: main.py
tools/hik_camera/src/: __init__.py
