[project]
name = "kielas-rm-detector-train"
version = "0.1.0"
description = "适合 rm 视觉体质的 关键点检测 模型"
readme = "README.md"
requires-python = "==3.10"
dependencies = [
    "cvbridge3>=1.1",
    "matplotlib>=3.10.*",
    "numpy<2.0.0",
    "opencv-python<4.11",  # 限制版本以兼容 NumPy 1.x
    "rich>=14.3.3",
    "PyYAML",
    "requests>=2.33.1",
]
